@@ -17,21 +17,34 @@ public class GameBoard {
         Collections.shuffle(deck);
 
         for (int i = 0; i < 3; i++) {
-            centerCards.add(deck.remove(0));
+            centerCards.add(deck.removeFirst());
         }
 
         for (UUID player : players) {
-            Role assignedRole = deck.remove(0);
+            Role assignedRole = deck.removeFirst();
             initialRoles.put(player, assignedRole);
             currentRoles.put(player, assignedRole);
         }
+    }
+
+    public List<Role> getAllRolesInGame() {
+        List<Role> allRoles = new ArrayList<>();
+        allRoles.addAll(initialRoles.values());
+        allRoles.addAll(centerCards);
+        return allRoles;
     }
 
     public Role getCurrentRole(UUID player) {
         return currentRoles.get(player);
     }
 
-    public List<Role> getCenterCards() {
-        return centerCards;
+    public Role getInitialRole(UUID player) { return initialRoles.get(player); }
+
+    public Role getCenterCard(int index) {
+        if (index >= 0 && index < centerCards.size()) {
+            return centerCards.get(index);
+        }
+        return null;
     }
+
 }
